updated javascript code

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </div>
         <div class="controls">
             <button class="button" id="start-btn">Start</button>
+            <button class="button" id="score-btn">View Highscores</button>
             <button class="next-button button hide" id="next-btn">Next</button>
             <button class="button hide" id="submit-btn">Submit</button>
             <button class="button hide" id="clear-btn">Clear Highscores</button>
@@ -38,6 +39,6 @@
         </div>
     </div>
 
-    <script src='./assets/js/script.js'></script>
+    <script src='./script.js'></script>
 </body>
 </html>
