updated code for quiz game

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h4 class="timer" style="text-align: start;"></h4>
+        <h4 id="timer" style="text-align: start;"></h4>
     </header>
     <div class="quiztime" id="intro">
         <h1>Quiz Time!</h1>
@@ -21,12 +21,8 @@
         <div class="hide" id="parent-container">
             <h2 id="question">question</h2>
             <div class="button-list" id="answer-buttons">
-                <button class="button">16</button>
-                <button class="button">19</button>
-                <button class="button">13</button>
-                <button class="button">20</button>
-                <h3 id="correct">Correct!</h3>
-                <h3 id="wrong">Wrong!</h3>
+                <h3 class="hide" id="correct">Correct!</h3>
+                <h3 class="hide" id="wrong">Wrong!</h3>
             </div>
         </div>
         <div class="controls">
